# hq70

questions/15/stairs/: stairs.cabal
questions/16/squares/: squares.cabal
questions/16/squares/src/: Lib.hs
questions/16/stairs/: stairs.cabal
questions/16/stairs/src/: Lib.hs
questions/28/club/: club.cabal
questions/28/club/src/: Lib.hs
